# ergot

./: README.md  checkall.sh  flake.nix  fmtall.sh
.github/workflows/: build-demos-nostd.yml  build-demos-std.yml  build.yml  clippy.yml  miri.yml
crates/cobs-acc/: Cargo.toml
crates/cobs-acc/src/: lib.rs
crates/ergot/: Cargo.toml
crates/ergot-base/: Cargo.toml  miri.sh
crates/ergot-base/src/: lib.rs  net_stack.rs  wire_frames.rs
crates/ergot-base/src/interface_manager/: cobs_stream.rs  eusb_0_4_client.rs  eusb_0_5_client.rs  framed_stream.rs  mgrv2.rs  mod.rs  nusb_0_1_router.rs  std_tcp_client.rs  std_tcp_router.rs  std_utils.rs
crates/ergot-base/src/interface_manager/impls/: eusb_0_4_client.rs  eusb_0_5_client.rs  mod.rs  null.rs  nusb_0_1_router.rs  std_tcp_client.rs  std_tcp_router.rs
crates/ergot-base/src/interface_manager/interface_impls/: embassy_usb.rs  embedded_io.rs  mod.rs  nusb_bulk.rs  std_tcp.rs
crates/ergot-base/src/interface_manager/profiles/: mod.rs  null.rs
crates/ergot-base/src/interface_manager/utils/: cobs_stream.rs  edge.rs  edge_bridge.rs  framed_stream.rs  mod.rs  std.rs
crates/ergot-base/src/socket/: borrow.rs  mod.rs  owned.rs  raw.rs  raw_owned.rs  std_bounded.rs
crates/ergot-base/tests/: smoke.rs
crates/ergot-old/: Cargo.toml
crates/ergot-old/src/: lib.rs  net_stack.rs
crates/ergot/src/: fmtlog.rs  lib.rs  net_stack.rs  toolkits.rs  well_known.rs  wire_frames.rs
crates/ergot/src/book/: _01_what_can_you_do.rs  _02_major_concepts.rs  _03_feature_overview.rs  _04_delivery_and_reliability.rs  mod.rs
crates/ergot/src/conformance/: net_stack.rs
crates/ergot/src/interface_manager/: edge_port.rs  mod.rs
crates/ergot/src/interface_manager/interface_impls/: embassy_net_udp.rs  embassy_usb.rs  embedded_io.rs  mod.rs  nusb_bulk.rs  tokio_mpsc.rs  tokio_serial_cobs.rs  tokio_udp.rs
crates/ergot/src/interface_manager/profiles/: direct_edge.rs  mod.rs  null.rs  router.rs
crates/ergot/src/interface_manager/profiles/direct_edge/: eio_0_6.rs  embassy_net_udp_0_7.rs  eusb_0_4.rs  mod.rs  tokio_mpsc.rs  tokio_tcp.rs  tokio_udp.rs
crates/ergot/src/interface_manager/profiles/direct_router/: mod.rs  nusb_0_1.rs  tokio_serial_5.rs  tokio_tcp.rs  tokio_udp.rs
crates/ergot/src/interface_manager/transports/: eusb_0_5.rs  eusb_0_6.rs  futures_io.rs  mod.rs  nusb.rs  packet.rs  tokio_cobs_stream.rs  tokio_serial.rs  tokio_udp.rs
crates/ergot/src/interface_manager/utils/: cobs_stream.rs  framed_stream.rs  std.rs
crates/ergot/src/logging/: defmt_sink.rs  defmt_v1.rs  defmtlog.rs  log_v0_4.rs  mod.rs
crates/ergot/src/net_stack/: arc.rs  discovery.rs  endpoints.rs  inner.rs  mod.rs  services.rs  topics.rs
crates/ergot/src/socket/: borrow.rs  endpoint.rs  mod.rs  owned.rs  raw_owned.rs  std_bounded.rs  topic.rs
crates/ergot/src/toolkits/: mod.rs
crates/ergot/src/transport/: rtt.rs
crates/ergot/tests/: bridge_router.rs  bus_claim_validation.rs  direct_router.rs  discovery.rs  e2e_bridge.rs  e2e_bridge_discovery.rs  e2e_bridge_seed.rs  e2e_bus_claim.rs  e2e_bus_segment.rs  e2e_router.rs  e2e_seed_delegation.rs  e2e_udp.rs  edge_rediscovery.rs  log_fmt.rs  mtu_discovery.rs  multi_interface.rs  no_std_router.rs  seed_delegation.rs  seed_delegation_regressions.rs  smoke.rs  smoke2.rs
crates/ergot/tests/common/: mod.rs
crates/network-tester/: Cargo.toml
crates/network-tester/src/: graph_map.rs  main.rs
demos/: README.md
demos/ergot-client/src/: main.rs
demos/ergot-nusb-router/src/: main.rs
demos/ergot-router/src/: main.rs
demos/esp32c3/: Cargo.toml
demos/esp32c3/esp32c3-serial/: Cargo.toml
demos/esp32c3/esp32c3-serial/src/: main.rs
demos/esp32c6/: Cargo.toml
demos/esp32c6/.cargo/: config.toml
demos/esp32c6/esp32c6-fern/: Cargo.toml  NOTES.md
demos/esp32c6/esp32c6-fern/src/: driver_proxy.rs  main.rs
demos/esp32c6/esp32c6-serial/src/: main.rs
demos/esp32c6/fern-icd/: Cargo.toml
demos/esp32c6/fern-icd/src/: lib.rs
demos/microbit/: Cargo.toml
demos/microbit/microbit-eusb/: Cargo.toml
demos/microbit/microbit-eusb/src/: main.rs
demos/nrf52840/: Cargo.toml
demos/nrf52840-eusb/: Cargo.toml
demos/nrf52840-eusb/src/: main.rs  prpc.rs
demos/nrf52840-null/src/: main.rs
demos/nrf52840/nrf52840-eusb/src/: main.rs
demos/nrf52840/nrf52840-null/src/: main.rs
demos/rp2040/: Cargo.toml
demos/rp2040-null/: Cargo.toml
demos/rp2040/rp2040-eusb/src/: main.rs
demos/rp2040/rp2040-null/src/: main.rs
demos/rp2040/rp2040-serial-pair/: Cargo.toml
demos/rp2040/rp2040-serial-pair/src/: lib.rs
demos/rp2350/: Cargo.toml
demos/rp2350/rp2350-eusb/src/: main.rs
demos/rp2350/rp2350-null/src/: main.rs
demos/rp2350/rp2350-tilt/: Cargo.toml
demos/rp2350/rp2350-tilt/src/: lsm6ds3tr.rs  main.rs
demos/shared-icd/: Cargo.toml
demos/shared-icd/src/: lib.rs
demos/std/: Cargo.toml
demos/std/ergo-bridge-pair-udp/: Cargo.toml
demos/std/ergot-bridge-client-tcp/src/: main.rs
demos/std/ergot-bridge-client/src/: main.rs
demos/std/ergot-bridge-pair-udp/: Cargo.toml
demos/std/ergot-client/src/: main.rs
demos/std/ergot-nusb-router/: Cargo.toml
demos/std/ergot-nusb-router/src/: main.rs
demos/std/ergot-router/src/: main.rs
demos/std/ergot-rtt-host/src/: main.rs
demos/std/ergot-seed-router/src/: main.rs
demos/std/log-router-serial/: Cargo.toml
demos/std/log-router-serial/src/: main.rs
demos/std/log-router/src/: main.rs
demos/std/stream-plotting/: Cargo.toml  README.md
demos/std/stream-plotting/src/: app.rs  datastream.rs  lib.rs  main.rs
demos/std/tilt-app/src/: main.rs
demos/stm32f303vc/: Cargo.toml  README.md
demos/stm32f303vc/stm32f303vc-blinky/: Cargo.toml
demos/stm32f303vc/stm32f303vc-button/src/: main.rs
demos/stm32g474/: Cargo.toml
demos/stm32h723zg/: Cargo.toml
demos/stm32h743zi/: Cargo.toml
notes/: 2026-06-01-bus-address-claim.md  2026-06-13-broadcast-delivery.md  ergot.monojson
notes/proposals/: 0145-phone-number-addressing.md  0146-link-layer.md  README.md
notes/proposals/0145-phone-number-addressing/: link-layer.md
notes/wip/: 2025-08-11-kickoff.md
(+9 files in other folders)
