[package]
name = "ergot"
version = "0.4.1"
authors = ["James Munns <james@onevariable.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/jamesmunns/ergot"
description = "The latest in unsafe network stacks"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = []
documentation = "https://docs.rs/ergot/"

[features]
default = [
    "disable-cache-padding",
]
std = [
    "ergot-base/std",
    "critical-section/std",
    "maitake-sync/std",
    "mutex/std",
    "postcard/use-std",
    "tokio",
]
disable-cache-padding = [
    "ergot-base/disable-cache-padding",
    "maitake-sync/no-cache-pad",
    "cordyceps/no-cache-pad",
]

[dependencies]
cobs            = "0.3.0"
cordyceps       = "0.3.4"
pin-project     = "1.1.10"
postcard-rpc    = "0.11.9"

critical-section    = { version = "1.2.0" }
maitake-sync        = { version = "0.2.1" }
mutex               = { version = "1.0.0",  features = ["impl-critical-section"] }
postcard            = { version = "1.1.1" }
postcard-schema     = { version = "0.2.1",  features = ["derive"] }
serde               = { version = "1.0",    features = ["derive"] }
tokio               = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "io-util", "net", "sync"], optional = true }

ergot-base = { version = "0.4.1", path = "../ergot-base" }
