[workspace]
members = [
    "esp32c3-serial",
]
resolver = "2"

[workspace.dependencies]
bbqueue         = { version = "0.6.0", default-features = false, features = ["critical-section", "maitake-sync-0_2"] }
ergot           = { path = "../../crates/ergot", features = ["embedded-io-async-v0_6"] }
portable-atomic = { version = "1.6.0", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[patch.crates-io]
bbqueue = { git = "https://github.com/okhsunrog/bbqueue.git", branch = "fix-portable-atomic-cs" }
