[workspace]
members = [
    "esp32c6-serial",
    "esp32c6-fern", "fern-icd",
]
exclude = [
    "fern-icd",
]
resolver = "2"

[workspace.dependencies]
ergot   = { path = "../../crates/ergot", features = ["embedded-io-async-v0_6"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[patch.crates-io]
esp-bootloader-esp-idf  = { git = "https://github.com/esp-rs/esp-hal", rev = "97cc5e4d7a99dca698f9f1d2a85f6c15c032fe11" }
esp-config              = { git = "https://github.com/esp-rs/esp-hal", rev = "97cc5e4d7a99dca698f9f1d2a85f6c15c032fe11" }
esp-hal                 = { git = "https://github.com/esp-rs/esp-hal", rev = "97cc5e4d7a99dca698f9f1d2a85f6c15c032fe11" }
esp-hal-embassy         = { git = "https://github.com/esp-rs/esp-hal", rev = "97cc5e4d7a99dca698f9f1d2a85f6c15c032fe11" }
esp-rom-sys             = { git = "https://github.com/esp-rs/esp-hal", rev = "97cc5e4d7a99dca698f9f1d2a85f6c15c032fe11" }


