[package]
name = "shared-icd"
version = "0.1.0"
edition = "2024"

[dependencies]
ergot   = { path = "../../crates/ergot" }
postcard-schema = { git = "https://github.com/jamesmunns/postcard.git", features = ["derive"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
