[package]
name = "shared-icd"
version = "0.1.0"
edition = "2024"

[dependencies]
ergot   = { path = "../../crates/ergot" }
postcard-schema = { version = "0.2.5", features = ["derive"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[patch.crates-io]
bbqueue = { git = "https://github.com/okhsunrog/bbqueue.git", branch = "fix-portable-atomic-cs" }
