[package]
name    = "esp32c6-fern"
edition = "2024"
version = "0.1.0"

[dependencies]
ergot                   = { workspace = true }

cfg-if                  = "1.0.0"
critical-section        = "1.2"
embassy-executor        = { version = "0.7.0",  features = ["task-arena-size-20480"] }
embassy-net             = { version = "0.6.0",  features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync            = { version = "0.7",    features = [] }
embassy-time            = "0.4.0"
embedded-io-async       = "0.6.1"
mutex                   = "1.0.2"
smart-leds              = "0.4.0"
static_cell             = { version = "2.1.1" }

esp-hal-smartled        = { git = "https://github.com/esp-rs/esp-hal-community", rev = "20badf1b03727153074fd647b5a3c2a26310ad3e" }

# patched
esp-bootloader-esp-idf  = { version = "0.2",    features = [ "esp32c6" ] }
esp-hal-embassy         = { version = "0.9.0",  features = ["esp32c6"] }

[dependencies.esp-hal]
version = "1.0.0-rc.0"
features = ["esp32c6", "unstable"]

[dependencies.esp-alloc]
git = "https://github.com/esp-rs/esp-hal"
rev = "97cc5e4d7a99dca698f9f1d2a85f6c15c032fe11"

[dependencies.esp-radio]
git = "https://github.com/esp-rs/esp-hal"
rev = "97cc5e4d7a99dca698f9f1d2a85f6c15c032fe11"
features = ["esp32c6", "wifi"]

[dependencies.esp-radio-preempt-baremetal]
git = "https://github.com/esp-rs/esp-hal"
rev = "97cc5e4d7a99dca698f9f1d2a85f6c15c032fe11"
features = ["esp32c6"]

[dependencies.esp-println]
git = "https://github.com/esp-rs/esp-hal"
rev = "97cc5e4d7a99dca698f9f1d2a85f6c15c032fe11"
features = ["esp32c6"]

