[package]
name = "ergot-bridge-pair-udp"
version = "0.1.0"
edition = "2024"

[dependencies]
cordyceps       = { workspace = true }
env_logger      = { workspace = true }
log             = { workspace = true }
ergot           = { workspace = true }
mutex           = { workspace = true }
tokio           = { workspace = true }
serde           = { version = "1.0.219", default-features = false, features = ["derive"] }
postcard-schema = { version = "0.2.5", features = ["derive"] }

[[bin]]
name = "controller"

[[bin]]
name = "target"
